<resources>
    <string name="app_name">Mind your Earth</string>
    <string name="title_activity_trash_map">Mind your Earth</string>

    <!--intro activity-->
    <string name="intro_first_card">Just tap on the map to add trash points near you</string>
    <string name="intro_msg">The universal idea is to keep Earth happy and clean but not each one of us is aware of her to full potential.</string>
    <string name="intro_third_card">Awareness is the first step to any solution. Take the first step and play your part.</string>
    <string name="intro_msg_title">Let\'s start by small scale</string>
    <string name="begin">START</string>

    <string name="loading_map">Loading map</string>
    <string name="getting_trash_points">Finding trash points</string>

    <!--stats-->
    <string name="stats_then_nill">Then : —</string>
    <string name="stats_now_nill">Now : —</string>
    <string name="stats_now">Now :</string>
    <string name="stats_then">Then :</string>
    <string name="since_last_visit">Since your last visit</string>
    <string name="trash_points">trash points</string>

    <!--trash point history-->
    <string name="your_trash_points">Your trash points &amp; votes</string>
    <string name="added_trash_point">You added a trash point</string>
    <string name="voted_trash_point">You voted a trash point</string>
    <string name="check_votes">Check votes</string>
    <string name="your_vote_dirty">You voted it dirty</string>
    <string name="your_vote_clean">You voted it clean</string>

    <!--agreement dialog-->
    <string name="btn_add_trash">ADD A TRASH POINT</string>
    <string name="title_dialog_agreement">Agreement</string>
    <string name="message_dialog_agreement">\n1. The trash point that you will add must be valid.
        \n\n2. The location that you will mark on the map must indicate a point of improvement.
        \n\n3. Being a habitant of Earth, you will mark such trash points very responsibly.</string>
    <string name="i_agree">I AGREE</string>

    <!--select type of dumping dialog-->
    <string name="title_dialog_add_trash_point">Select trash type</string>
    <string name="trash_markers_left">Trash markers left :</string>
    <string name="trash_markers_renew">your trash markers will renew each day</string>
    <string name="dumping_land">Land dumping</string>
    <string name="dumping_water">Water dumping</string>
    <string name="dumping_air">Air dumping</string>
    <string name="dumping_food">Food wastage</string>

    <!--rewarded video dialog-->
    <string name="get_three_markers">Get 3 more trash markers</string>
    <string name="watch_viedo_to_earn">Watch video to earn 3 more trash markers</string>
    <string name="watch_to_earn_description">You can only add 3 trash points per day. To earn and add more trash points, watch a video. The earned trash markers are valid to be used today only.</string>
    <string name="watch_video">WATCH VIDEO</string>

    <!--fetching location progress dialog -->
    <string name="fetching_location">Getting your location…</string>
    <string name="location_error">Unable to get your location</string>

    <!--marking trashpoint on map-->
    <string name="mark_trash_context_text">Tap on map to add</string>
    <string name="save_trash_context_text">Save trash point</string>

    <!--invalid location dialog-->
    <string name="invalid_location">Location not valid</string>
    <string name="invalid_location_msg">You can only add trash points 1 km away from your current location</string>

    <!--saving trash point progress dialog-->
    <string name="saving_data">Saving trash point</string>

    <!--response after trying to save trash point to firebase database-->
    <string name="failed_to_add_trash_point">Failed to add trash point</string>
    <string name="success_add_trash_point">Trash point added successfully</string>

    <!--============= Trash Detail Dialog ================-->

    <!--dialog header-->
    <string name="added_on">added on</string>
    <string name="on_maps">Show on Maps</string>
    <string name="remove_trash_point">Remove trash point</string>

    <!--votes-->
    <string name="people_say">claim</string>
    <string name="it_clean">It\'s clean</string>
    <string name="its_dirty">not clean</string>
    <string name="you_say">You say</string>
    <string name="failed_to_get_votes">Error</string>

    <!--share trash point-->
    <string name="share_trash_point">Share trash point</string>
    <string name="share_description">image/link of the trash</string>
    <string name="share_link">Link</string>
    <string name="share_image">Image</string>
    <string name="building_link">Building link</string>
    <string name="try_again">Please try again</string>
    <string name="choose_image">Choose photo</string>
    <string name="share_via">Share via</string>
    <string name="trash_link_to_clipboard">Trash link copied to clipboard</string>
    <string name="select_one_to_vote">Select one to vote</string>
    <string name="trash_share_text_one">Trash point located at</string>
    <string name="link">Link:</string>

    <!--trash point removal/reomved-->
    <string name="trash_point_removed">Trash point has been removed</string>
    <string name="cancel_removal_btn_txt">Cancel</string>
    <string name="remove_trash_btn_txt">Remove</string>
    <string name="ask_trash_removal">Remove trash point?</string>

    <!--permissions request dialog-->
    <string name="permissions_request_title">Permissions needed</string>
    <string name="msg_permissions_needed">Location permissions are required to find your location. Please enable them.</string>
    <string name="please_wait">Please wait</string>
    <string name="enable">ENABLE</string>

    <!--rewarded video-->
    <string name="failed_to_load_ad">Failed to load</string>
    <string name="loading_video">Loading video</string>

    <!--adMob ids-->
    <string name="ad_app_id" translatable="false">ca-app-pub-4200151682628675~5857930145</string>
    <string name="ad_rewarded_adunit_id" translatable="false">ca-app-pub-4200151682628675/1288129748</string>
    <string name="ad_native_adunit_id" translatable="false">ca-app-pub-4200151682628675/7334663342</string>
    <string name="native_ad_size" translatable="false">280x100</string>


    <!--preferences-->
    <string name="pref_new_user" translatable="false">newUser</string>
    <string name="pref_count" translatable="false">count</string>
    <string name="pref_last_marker_timestamp" translatable="false">lastMarkerTimestamp</string>
    <string name="pref_trash_count" translatable="false">trashPointsCount</string>
    <string name="pref_first_vote_done" translatable="false">firstVoteDone</string>
    <string name="pref_tutorial_done" translatable="false">tutorialComplete</string>
    <string name="shared_pref_user" translatable="false">userData</string>

    <string name="fail_to_get_trashpoints">Failed to get trashpoints</string>
    <string name="no_network">No network</string>
    <string name="no_network_msg">No internet connectivity</string>
    <string name="retry">RETRY</string>

    <!--tutorial-->
    <string name="tutorial">Tutorial</string>
    <string name="skip">skip</string>
    <string name="hey_user">Hello, User!</string>
    <string name="tutorial_msg">This is a one step tutorial to guide you to get more details &amp; options of a trash point. Click on the trash point marker on the map.</string>
    <string name="next">NEXT</string>
    <string name="got_it">Okay, got it</string>
    <string name="thats_it">Voila, that\'s it!</string>
    <string name="tutorial_finish_msg">Remember, your voting options will only be visible if you are in 1 km range from the trash point.\n\nAlso, to remove a trash point, be in 1 km range from the trash point that satisfies removal criteria.</string>
    <string name="done">Done</string>
    <string name="sample_title">Dumping sample</string>
    <string name="sample_more">Sample details of trash point</string>
    <string name="satellite_view">Satellite view</string>
    <string name="normal_view">Normal view</string>

</resources>

