<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_margin">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/last_visit_label"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/blue"
        android:drawablePadding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:text="@string/since_last_visit"
        android:textSize="@dimen/font_subheading"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/then"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/stats_then"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/text_primary"
        fontPath="fonts/medium.otf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_visit_label"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/stats_now"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/text_primary"
        fontPath="fonts/medium.otf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/then"/>
</android.support.constraint.ConstraintLayout>