<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rewardmarkers"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_viedo_to_earn"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font_subheading"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView6"
            fontPath="fonts/medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/watch_to_earn_description"
            android:textColor="@color/text_secondary_icons"
            android:textSize="@dimen/font_body_button"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:id="@+id/watchVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="121dp">

            <Button
                android:id="@+id/showRewVideoAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/watch_video"
                android:textColor="@android:color/white"/>

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>