<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.mindyourearth.planet.IntroActivity">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/sun"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:translationX="16dp"
        android:translationY="-32dp"
        app:layout_constraintEnd_toEndOf="@+id/happy_earth"
        app:layout_constraintTop_toTopOf="@+id/happy_earth"
        app:srcCompat="@drawable/sun"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/happy_earth"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintVertical_chainStyle="packed"/>

    <FrameLayout
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="begin"
            android:text="@string/begin"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"/>

    </FrameLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/intro_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        fontPath="fonts/medium.otf"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happy_earth"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/msg_title"/>

    <TextView
        android:id="@+id/msg_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/intro_msg_title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"/>

</android.support.constraint.ConstraintLayout>
