<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/votes_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vote_section_background"
            android:paddingBottom="@dimen/vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ProgressBar
                android:id="@+id/progress_bar_votes"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/it_clean"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="10dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/people_say"
                android:textColor="@color/text_secondary_icons"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/votes_clean_count"
                tools:layout_editor_absoluteX="13dp"/>

            <TextView
                android:id="@+id/votes_clean_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="..."
                android:textSize="@dimen/font_heading"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="24dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/its_dirty"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="312dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/people_say"
                android:textColor="@color/text_secondary_icons"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/votes_dirty_count"
                tools:layout_editor_absoluteX="322dp"/>

            <TextView
                android:id="@+id/votes_dirty_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="..."
                android:textSize="@dimen/font_heading"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="334dp"/>

            <TextView
                android:id="@+id/you_say"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/you_say"
                android:textColor="@color/text_secondary_icons"
                app:layout_constraintEnd_toStartOf="@+id/space2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <View
                android:id="@+id/space2"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/text_secondary_icons"
                app:layout_constraintBottom_toBottomOf="@+id/you_say"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/you_say"
                app:layout_constraintTop_toTopOf="@+id/you_say"
                android:layout_marginStart="8dp"/>

            <View
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/text_secondary_icons"
                app:layout_constraintBottom_toBottomOf="@+id/you_say"
                app:layout_constraintEnd_toStartOf="@+id/you_say"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/you_say"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="103dp"
                android:layout_marginEnd="8dp"/>

            <android.support.v7.widget.AppCompatImageView
                android:alpha="0.3"
                android:id="@+id/user_vote_clean"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/you_say"
                app:srcCompat="@drawable/clean_leaf"/>

            <TextView
                android:alpha="0.3"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/it_clean"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/user_vote_clean"
                app:layout_constraintStart_toStartOf="@+id/user_vote_clean"
                app:layout_constraintTop_toBottomOf="@+id/user_vote_clean"/>

            <android.support.v7.widget.AppCompatImageView
                android:alpha="0.3"
                android:id="@+id/user_vote_dirty"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/you_say"
                app:srcCompat="@drawable/marker_air_dumping"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/its_dirty"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/user_vote_dirty"
                app:layout_constraintStart_toStartOf="@+id/user_vote_dirty"
                app:layout_constraintTop_toBottomOf="@+id/user_vote_dirty"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/share_trash_point"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/votes_section">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/share_trash_point"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/font_subheading"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>